syntax = "proto3";

package product;

option go_package = "wensiet.product.v1;productv1";

service ProductServ {
  rpc GetProduct(GetProductRequest) returns (Product);
  rpc GetProducts(GetProductsRequest) returns (GetProductsResponse);
  rpc CreateProduct(CreateProductRequest) returns (CreateProductResponse);
  rpc BeginOrder(BeginOrderRequest) returns (BeginOrderResponse);
  rpc ApplyOrder(ApplyOrderRequest) returns (ApplyOrderResponse);
}

message Product {
  string id = 1;
  string title = 2;
  string description = 3;
  float price = 4;
  int32 quantity = 5;
}

message GetProductRequest {
  string id = 1;
}

message GetProductResponse {
  Product product = 1;
}

message GetProductsRequest {
  int32 page = 1;
  int32 limit = 2;
}

message GetProductsResponse {
  repeated Product products = 1;
  int32 total = 2;
}

message CreateProductRequest {
  string title = 1;
  string description = 2;
  float price = 3;
  int32 quantity = 4;
}

message CreateProductResponse {
  string id = 1;
}

message BeginOrderRequest {
  string productId = 1;
  int32 quantity = 2;
}

message BeginOrderResponse {
  string transactionId = 1;
}

message ApplyOrderRequest {
  bool success = 1;
  string transactionId = 2;
}

message ApplyOrderResponse {
  bool success = 1;
}
